--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
             </center>
 
-            <button class="again btn btn-body btn-lg text-white" @click="change_status()">RESTART</button><br>
+            <button class="again btn btn-body btn-lg text-white" @click="change_status()"> <p>RESTART</p> </button><br>
             <!-- <div class="human" id="human" >PRESS Spacebar</div> -->
             <img src="Artboard 322.png" class="human" id="human">
 
@@ -245,8 +245,8 @@
             <div>
                 <h1 v-if="status_sort" style="font-family: 'Neucha', cursive">Sort By Solar</h1>
                 <h1 v-else>Sort By Gravity</h1>
-                <button type="button" class="btn btn-body btn-lg text-white" v-if="status_sort" @click="sort_by()">Gravity</button>
-                <button type="button" class="btn btn-body btn-lg text-white" v-else @click="sort_by()">Solar</button>
+                <button type="button" class="btn btn-body btn-lg text-white" v-if="status_sort" @click="sort_by()"> <p>Gravity</p> </button>
+                <button type="button" class="btn btn-body btn-lg text-white" v-else @click="sort_by()"> <p>Solar</p> </button>
             </div>
             <!-- ปุ่มรูปแบบการเรียง -->
 
@@ -268,110 +268,6 @@
     <!-- ดาวใหญ่-->
 
     <center>
-        <!-- <div class="table-responsive">
-            <table>
-                <tr>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="earth.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Earth</h2>
-                                <p>The planet that we have lived</p>
-
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="venus.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Venus</h2>
-                                <p>Venus has 90 times the atmospheric pressure of Earth</p>
-
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="jupitor.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Jupitor</h2>
-                                <p>The Fastest Spinning Planet In The Solar System!!!</p>
-
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="saturn.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Saturn</h2>
-                                <p>Saturn is the flattest planet.</p>
-
-                            </div>
-                        </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="Mercury.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Mercury</h2>
-                                <p>A day on the surface of Mercury lasts 176 Earth days.</p>
-
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="mars.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Mars</h2>
-                                <p>Its signature color come from Iron oxide. </p>
-
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="uranus.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Uranus</h2>
-                                <p>Uranus was discovered in 1781 by William Herschel.</p>
-
-                            </div>
-                        </div>
-                    </th>
-                    <th>
-                        <div class="view view-ninth">
-                            <img src="neptune.jpg" style="width:300px;height:200px;" />
-                            <div class="mask mask-1"></div>
-                            <div class="mask mask-2"></div>
-                            <div class="content">
-                                <h2>Neptune</h2>
-                                <p>Neptune has the Strongest Winds in the Solar System</p>
-
-                            </div>
-                        </div>
-                    </th>
-                </tr>
-            </table>
-        </div> -->
         <div style="margin-left: 5.5%;">
             <div class="view view-ninth">
                 <img src="earth.jpg" style="width:300px;height:200px;" />
