--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <center>
         <div style="margin-left: 5.5%;">
             <div class="view view-ninth">
-                <img src="earth.jpg" style="width:300px;height:200px;" />
+                <img src="/image/earth.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -281,7 +281,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="venus.jpg" style="width:300px;height:200px;" />
+                <img src="/image/venus.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -291,7 +291,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="jupitor.jpg" style="width:300px;height:200px;" />
+                <img src="/image/jupitor.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -301,7 +301,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="saturn.jpg" style="width:300px;height:200px;" />
+                <img src="/image/saturn.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -311,7 +311,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="Mercury.jpg" style="width:300px;height:200px;" />
+                <img src="/image/Mercury.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -321,7 +321,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="mars.jpg" style="width:300px;height:200px;" />
+                <img src="/image/mars.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -331,7 +331,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="uranus.jpg" style="width:300px;height:200px;" />
+                <img src="/image/uranus.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
@@ -341,7 +341,7 @@
                 </div>
             </div>
             <div class="view view-ninth">
-                <img src="neptune.jpg" style="width:300px;height:200px;" />
+                <img src="/image/neptune.jpg" style="width:300px;height:200px;" />
                 <div class="mask mask-1"></div>
                 <div class="mask mask-2"></div>
                 <div class="content">
