--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <button class="again btn btn-body btn-lg text-white" @click="change_status()"> <p>RESTART</p> </button><br>
             <!-- <div class="human" id="human" >PRESS Spacebar</div> -->
-            <img src="Artboard 322.png" class="human" id="human" @click="jump()">
+            <img src="/image/Artboard 322.png" class="human" id="human" @click="jump()">
 
             <!-- แถวดาวเคราะห์ -->
             <div v-for="i in 8" style="height: 0px; font-family: 'Neucha', cursive; font-size: 24px">
