--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -58,19 +59,19 @@
 
         <!-- หน้า Time_To_Bloom -->
         <div v-if="what_page == 'Time_To_Bloom'" class="container Time_To_Bloom_container">
+            
+            <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
+                <source src="finalแก้.mp4" type="video/mp4">
+            </video>
             <div class="row Time_To_Bloom_row">
                 <div class="cal-6">
                     <p class="time_to_bloom_text">Discover all<br>about law<br>for women<br>in Thailand</p>
                     <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png"
                         @click="change_page('Home')">
                 </div>
-                <div class="cal-6">
-                    <!-- <video autoplay muted style="margin: 0;" class="logo_gif">
-                        <source src="test.mp4" type="video/mp4">
-                            Kimetsu no yaiba movie Official Trailer.
-                    </video> -->
-                    <img id="gif_home" src="Architecture/Time_To_Bloom_page/final.gif" class="logo_gif">
-                </div>
+                <!-- <div class="cal-6"> -->
+                    <!-- <img id="gif_home" src="Architecture/Time_To_Bloom_page/final.gif" class="logo_gif"> -->
+                <!-- </div> -->
             </div>
         </div>
         <!-- หน้า Time_To_Bloom -->
@@ -79,7 +80,10 @@
         <div v-if="what_page == 'Home'" class="container">
             <div class="row">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-right" class="col-6">
-                    <img :src="info.Home[0].Img" class="home_gif1">
+                    <video autoplay muted style="margin: 0;">
+                        <source src="Architecture/solve/homepage/หยดน้ำ.mp4" type="video/mp4">
+                    </video>
+                    <!-- <img :src="info.Home[0].Img" class="home_gif1"> -->
                 </div>
                 <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6">
                     <p class="topic_text home_topic_text">
@@ -92,7 +96,12 @@
             </div>
         </div>
 
-        <div data-aos="fade-down" data-aos-anchor-placement="top-center" v-if="what_page == 'Home'" class="home_gif2">
+        <div data-aos="fade-down" data-aos-anchor-placement="top-center" v-if="what_page == 'Home'">
+
+            <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                <source src="test.mp4" type="video/mp4">
+                <!-- <source src="Architecture/solve/homepage/กรอบรูป.mp4" type="video/mp4"> -->
+            </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-up" class="home_text2">
                     <p class="topic_text home_topic_text2">
@@ -114,6 +123,9 @@
 
         <!-- หน้า Draf law -->
         <div v-if="what_page == 'Draf law'" class="container">
+            <video autoplay muted style="margin: 0;">
+                <source src="Architecture/solve/draf law/test3.mp4" type="video/mp4">
+            </video>
         </div>
         <!-- หน้า Draf law -->
 
@@ -138,28 +150,28 @@
                         </ul>
                     </nav>
                     <div class="contact_info">
-                        <p>{{info.Contact[contact_mean].Address}}</p>
-                        <p>{{info.Contact[contact_mean].Phone}}</p>
-                        <p>{{info.Contact[contact_mean].Email}}</p>
-                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB"
+                        <img src="Architecture/solve/contact/home.png" class="contact_logo" style="height: 18px; width: 20px;"><p>{{info.Contact[contact_mean].Address}}</p>
+                        <img src="Architecture/solve/contact/phone.png" class="contact_logo" style="height: 16px; width: 14px;"><p>{{info.Contact[contact_mean].Phone}}</p>
+                        <img src="Architecture/solve/contact/emall.png" class="contact_logo" style="height: 12px; width: 17px;"><p>{{info.Contact[contact_mean].Email}}</p>
+                        <img src="Architecture/solve/contact/facebook.png" class="contact_logo" style="height: 18px; width: 18px;"><p>Facebook: <a :href="info.Contact[contact_mean].LinkFB"
                                 target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
-                        <p>Website: <a :href="info.Contact[contact_mean].Web"
+                        <img src="Architecture/solve/contact/web.png" class="contact_logo" style="height: 22px; width: 22px;"><p>Website: <a :href="info.Contact[contact_mean].Web"
                                 target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
                 <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7" style="
-                height: 700px;">
+                height: 710px;">
                     <iframe v-if="contact_mean == 0"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
-                        width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
+                        width="712" height="710" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe>
                     <iframe v-if="contact_mean == 1"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
-                        width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
+                        width="712" height="710" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe>
                     <iframe v-if="contact_mean == 2"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
-                        width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
+                        width="712" height="710" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
