--- a/Arc/index.html
+++ b/Arc/index.html
@@ -40,8 +40,7 @@
         <!-- แถบเมนูด้านบน -->
         <nav v-if="what_page != 'Before_Time_To_Bloom'" class="navbar navbar-expand menu">
 
-            <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png"
-                @click="change_page('Time_To_Bloom')">
+            <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png" @click="change_page('Time_To_Bloom')">
 
             <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page">
                 <li class="nav-item">
@@ -65,8 +64,7 @@
             <div class="row Time_To_Bloom_row">
                 <div class="cal-6">
                     <p class="time_to_bloom_text">Discover all<br>about law<br>for women<br>in Thailand</p>
-                    <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png"
-                        @click="change_page('Home')">
+                    <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png" @click="change_page('Home')">
                 </div>
                 <div class="cal-6">
                     <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
@@ -85,12 +83,11 @@
             <div class="row">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-right" class="col-6">
                     <video autoplay muted style="margin: 0;" class="home_bg_vdo">
-                        <source src="Architecture/solve/homepage/หยดน้ำแก้ล่าสุด.mp4" type="video/mp4">
+                        <source src="Architecture/solve/homepage/หยดน้ำ1.mp4" type="video/mp4">
                     </video>
                     <!-- <img :src="info.Home[0].Img" class="home_gif1"> -->
                 </div>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
-                    style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
+                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
                     <p class="topic_text home_topic_text">
                         {{info.Home[0].LawName}}
                     </p>
@@ -141,48 +138,35 @@
                     <nav class="navbar navbar-expand contact_menu">
                         <ul class="nav nav-pills" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="pill" href="#" role="tab" aria-selected="true"
-                                    @click="contact_mean = 0">{{info.Contact[0].CName}}</a>
+                                <a class="nav-link active" data-toggle="pill" href="#" role="tab" aria-selected="true" @click="contact_mean = 0">{{info.Contact[0].CName}}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false"
-                                    @click="contact_mean = 1">{{info.Contact[1].CName}}</a>
+                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false" @click="contact_mean = 1">{{info.Contact[1].CName}}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false"
-                                    @click="contact_mean = 2">{{info.Contact[2].CName}}</a>
+                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false" @click="contact_mean = 2">{{info.Contact[2].CName}}</a>
                             </li>
                         </ul>
                     </nav>
                     <div class="contact_info">
-                        <img src="Architecture/solve/contact/home.png" class="contact_logo"
-                            style="height: 18px; width: 20px;">
+                        <img src="Architecture/solve/contact/home.png" class="contact_logo" style="height: 18px; width: 20px;">
                         <p>{{info.Contact[contact_mean].Address}}</p>
-                        <img src="Architecture/solve/contact/phone.png" class="contact_logo"
-                            style="height: 16px; width: 14px;">
+                        <img src="Architecture/solve/contact/phone.png" class="contact_logo" style="height: 16px; width: 14px;">
                         <p>{{info.Contact[contact_mean].Phone}}</p>
-                        <img src="Architecture/solve/contact/emall.png" class="contact_logo"
-                            style="height: 12px; width: 17px;">
+                        <img src="Architecture/solve/contact/emall.png" class="contact_logo" style="height: 12px; width: 17px;">
                         <p>{{info.Contact[contact_mean].Email}}</p>
-                        <img src="Architecture/solve/contact/facebook.png" class="contact_logo"
-                            style="height: 18px; width: 18px;">
-                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB"
-                                target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
-                        <img src="Architecture/solve/contact/web.png" class="contact_logo"
-                            style="height: 22px; width: 22px;">
-                        <p>Website: <a :href="info.Contact[contact_mean].Web"
-                                target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
+                        <img src="Architecture/solve/contact/facebook.png" class="contact_logo" style="height: 18px; width: 18px;">
+                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB" target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
+                        <img src="Architecture/solve/contact/web.png" class="contact_logo" style="height: 22px; width: 22px;">
+                        <p>Website: <a :href="info.Contact[contact_mean].Web" target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
                 <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test">
-                    <iframe v-if="contact_mean == 0" class="test"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
+                    <iframe v-if="contact_mean == 0" class="test" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 1" class="test"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
+                    <iframe v-if="contact_mean == 1" class="test" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 2" class="test"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
+                    <iframe v-if="contact_mean == 2" class="test" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
@@ -207,7 +191,9 @@
 
 </body>
 <script>
-    window.onscroll = function () { scrollFunction() };
+    window.onscroll = function() {
+        scrollFunction()
+    };
 
     function scrollFunction() {
         if (document.documentElement.scrollTop > 50) {
@@ -249,25 +235,23 @@
             contact_mean: 0,
         },
         methods: {
-            change_page: function (page) {
+            change_page: function(page) {
                 this.what_page = page;
                 document.title = app.what_page;
                 if (page == "Home") {
                     this.final_page = true;
                     this.hidden_or_show_scroll_bar(true);
                     document.documentElement.style.setProperty("--home_img2", 'url("Architecture/Home_page/giflaw2.gif")');
-                }
-                else if (page == "Contact" || page == "Before_Time_To_Bloom" || page == "Time_To_Bloom") {
+                } else if (page == "Contact" || page == "Before_Time_To_Bloom" || page == "Time_To_Bloom") {
                     if (page == "Time_To_Bloom") {
                         document.title = "Time To Bloom";
                     }
                     this.hidden_or_show_scroll_bar(false);
-                }
-                else if (page != "Time_To_Bloom") {
+                } else if (page != "Time_To_Bloom") {
                     this.final_page = false;
                 }
             },
-            hidden_or_show_scroll_bar: function (boo) {
+            hidden_or_show_scroll_bar: function(boo) {
                 if (boo) {
                     document.documentElement.style.setProperty("--overflow", 'auto');
                 } else {
@@ -276,8 +260,8 @@
             }
         }
     })
-    var count_down = setInterval(function () {
-        if (document.getElementById("before").ended) {//เช็คว่า vdo หน้าก่อน time to bloom จบยัง
+    var count_down = setInterval(function() {
+        if (document.getElementById("before").ended) { //เช็คว่า vdo หน้าก่อน time to bloom จบยัง
             app.change_page("Time_To_Bloom");
             clearInterval(count_down);
         }
